src/test/ui/issues/issue-5997-enum.stderr
error[E0401]: can't use generic parameters from outer function
  --> $DIR/issue-5997-enum.rs:2:16
   |
LL | fn f<Z>() -> bool {
   |    - - type parameter from outer function
   |    |
   |    try adding a local generic parameter in this method instead
LL |     enum E { V(Z) }
   |                ^ use of generic parameter from outer function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0401`.
